// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCapabilities should get capability from wdio.conf.js 1`] = `
Object {
  "capabilities": Object {
    "acceptInsecureCerts": true,
    "browserName": "chrome",
    "goog:chromeOptions": Object {
      "args": Array [
        "window-size=8000,1200",
      ],
    },
  },
}
`;

exports[`getCapabilities should return driver with capabilities for android 1`] = `
Object {
  "capabilities": Object {
    "app": "foo.apk",
    "automationName": "UiAutomator2",
    "deviceName": "Test",
    "platformName": "Android",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;

exports[`getCapabilities should return driver with capabilities for android 2`] = `
Object {
  "capabilities": Object {
    "automationName": "UiAutomator2",
    "browserName": "Chrome",
    "deviceName": "Test",
    "platformName": "Android",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;

exports[`getCapabilities should return driver with capabilities for desktop 1`] = `
Object {
  "capabilities": Object {
    "browserName": "chrome",
  },
}
`;

exports[`getCapabilities should return driver with capabilities for ios 1`] = `
Object {
  "capabilities": Object {
    "app": "foo.app",
    "automationName": "XCUITest",
    "deviceName": "fooName",
    "platformName": "iOS",
    "platformVersion": "fooNum",
    "udid": "num",
  },
}
`;

exports[`getCapabilities should return driver with capabilities for ios 2`] = `
Object {
  "capabilities": Object {
    "automationName": "XCUITest",
    "browserName": "Safari",
    "deviceName": "iPhone Simulator",
    "platformName": "iOS",
    "platformVersion": undefined,
    "udid": undefined,
  },
}
`;

exports[`getCapabilities should through capability not found 1`] = `"No capability found in given config file with the provided capability indexed/named property: 5. Please check the capability in your wdio config file."`;

exports[`getCapabilities should throw capability not provided 1`] = `"Please provide index/named property of capability to use from the capabilities array/object in wdio config file"`;

exports[`getCapabilities should throw config not found error 1`] = `"Config File not found: ./test.js"`;

exports[`getCapabilities should throw config not found error 2`] = `"Could not parse ./test.js, failed with error : ups"`;
